# backend-Jd-Dashboard

./: .gitignore  _seed_run.py  _update_mongo.py  database.py  main.py  migrate_analysis_prompt.py  models.py  mongo.py  pyproject.toml  requirements.txt  schemas.py  seed.py  seed_admin_user.py  seed_analysis_prompts.py  seed_bot_config.py  seed_dev_bot.py  seed_justdial_appointment_workflow_bot.py  seed_mongo.py  seed_two_tts_bots.py  simran_prompt.txt  update_db_webrtc_mis.py  voice_catalog.py
routers/: analysis.py  assistants.py  auth.py  bot_config.py  call_logs.py  function_test.py  phone_numbers.py  tts_preview.py  workflow_bots.py
