[project]
name = "nocode-platform-backend"
version = "0.1.0"
description = "FastAPI backend for the No-Code Platform agents dashboard"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "motor>=2.5,<3",
    "pymongo>=3.11,<4",
]
